ajuste meta tags

--- a/desenvolvimento/views/about.html
+++ b/desenvolvimento/views/about.html
@@ -13,7 +13,8 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="shortchut icon" href="favicon.ico">
+	<link rel="shortchut icon" href="../img/favicon.ico">
+	
 	<link rel="stylesheet" type="text/css" href="../style/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../style/reset.css">
 	<link rel="stylesheet" type="text/css" href="../style/grid.css">
@@ -85,12 +86,12 @@
 		</ul>
 	</section>
 
-	<section class="footer-break">
+	<div class="footer-break">
 		<blockquote class="quote-extern container">
 			<p>“O verdadeiro segredo da felicidade esta em ter um genuíno interesse por todos os detalhes da vida cotidiana”</p>
 			<cite>William Morris</cite>
 		</blockquote>		
-	</section>
+	</div>
 
 	<footer class="footer">
 		<div class="footer-infos">
