--- a/desenvolvimento/views/contact.html
+++ b/desenvolvimento/views/contact.html
@@ -13,7 +13,8 @@
 
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-	<link rel="shortchut icon" href="favicon.ico">
+	<link rel="shortchut icon" href="../img/favicon.ico">
+	
 	<link rel="stylesheet" type="text/css" href="../style/normalize.css">
 	<link rel="stylesheet" type="text/css" href="../style/reset.css">
 	<link rel="stylesheet" type="text/css" href="../style/grid.css">
@@ -85,12 +86,12 @@
 		<a href="https://www.google.com/maps/place/Av.+Paulista,+S%C3%A3o+Paulo+-+SP/data=!4m2!3m1!1s0x94ce59c8da0aa315:0xd59f9431f2c9776a?ved=2ahUKEwi0idbppY_gAhWMILkGHQIiAEgQ8gEwAHoECAMQAQ" target="_blank"><img src="../img/contact-maps.jpg" alt="Endereço Bikcraft" class="grid-16"></a>
 	</section>
 
-	<section class="footer-break">
+	<div class="footer-break">
 		<blockquote class="quote-extern container">
 			<p>“O verdadeiro segredo da felicidade esta em ter um genuíno interesse por todos os detalhes da vida cotidiana”</p>
 			<cite>William Morris</cite>
 		</blockquote>		
-	</section>
+	</div>
 
 	<footer class="footer">
 		<div class="footer-infos">
