--- a/desenvolvimento/views/index.html
+++ b/desenvolvimento/views/index.html
@@ -133,12 +133,12 @@
 		</div>
 	</section>
 	
-	<section class="footer-break">
+	<div class="footer-break">
 		<blockquote class="quote-extern container">
 			<p>“O verdadeiro segredo da felicidade esta em ter um genuíno interesse por todos os detalhes da vida cotidiana”</p>
 			<cite>William Morris</cite>
 		</blockquote>		
-	</section>
+	</div>
 
 	<footer class="footer">
 		<div class="footer-infos">
